--- a/Desafio6/src/public/index.html
+++ b/Desafio6/src/public/index.html
@@ -43,8 +43,9 @@
     <div class="row offset-md-3">
         <div class="col-md-6">
             <h1>Centro de Mensajes</h1>
-            <input id="chatBox" placeholder="Ingresá un mensaje...">
-            <input disabled id="enviar" class="btn btn-primary my-2" type="submit" value="Enviar!">
+            <input type="text" class="form-control" name="mensaje" id="txtMessage" placeholder="Ingrese su Mensaje">
+            <button type="button"  class="btn btn-primary mt-2" id="SendChat">Enviar</button>
+        </div>
         </div>
     </div>
     <p id="log"></p>
