--- a/Desafio9/src/public/index.html
+++ b/Desafio9/src/public/index.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <!-- <div class="row offset-md-3">
+    <div class="row offset-md-3">
         <div class="col-md-6">
-            <h1>Ingrese Producto:</h1>
+            <h1>Ingrese sus Datos:</h1>
         </div>
-    </div> -->
+    </div>
     <div class="card">
         <div class="card-body">
             <form id="productForm">
 
-                <!-- <div class="form-group mb-3">
+                <div class="form-group mb-3">
                     <input type="text" name="title" placeholder="Nombre de producto" class="form-control">
                 </div>
 
@@ -35,7 +35,7 @@
 
                 <div class="form-group">
                     <button type="submit" class="btn btn-success btn-block">Cargar producto</button>
-                </div> -->
+                </div>
             </form>
         </div>
     </div>
@@ -43,6 +43,21 @@
     <div class="row offset-md-3">
         <div class="col-md-6">
             <h1>Centro de Mensajes</h1>
+            <div class="mb-3" style="width: 50%;">
+              <input type="text" class="form-control" placeholder="Nombre" name="nombre" id="name" />
+            <div>
+            <div class="mb-3" style="width: 50%;">
+              <input type="text" class="form-control" placeholder="Apellido" name="Apellido" id="last_Name" />
+            </div>
+            <div class="mb-3" style="width: 50%;">
+              <input type="text" class="form-control" placeholder="Edad" name="Edad" id="age" />
+            </div>     
+            <div class="mb-3" style="width: 50%;">
+              <input type="text" class="form-control" placeholder="Alias" name="Alias" id="nickname" />
+            </div>    
+            <div class="mb-3" style="width: 50%;">
+              <input type="text" class="form-control" placeholder="Avatar" name="Avatar" id="avatar" />
+            </div>                               -->
             <input type="text" class="form-control" name="mensaje" id="txtMessage" placeholder="Ingrese su Mensaje">
             <button type="button"  class="btn btn-primary mt-2" id="SendChat">Enviar</button>
         </div>
@@ -55,6 +70,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
     <script src="index.js"></script>
 </body>
 
