Desafio 10 Login Por Formulario

--- a/Desafio10/src/public/index.html
+++ b/Desafio10/src/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="row offset-md-3">
          <div class="alert alert-success p-3 d-flex justify-content-between">
-            <h2 class="text-success" style="display: inline">Bienvenido ${data}</h2>
+            <h2 class="text-success" style="display: inline">Bienvenido</h2>
             <a class="btn btn-warning" href="/logout" >Deslogear</a>
           </div>
         <div class="col-md-6">
