--- a/Desafio13/src/nginx/html/index.html
+++ b/Desafio13/src/nginx/html/index.html
@@ -10,7 +10,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </head>
 <body>
 <h1>Welcome to nginx!</h1>
-<h2>Hola Johi</h2>
+<h2>Desafio 13 Balanceo de Carga</h2>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
